--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,77 +1,10 @@
-<div class="top-nav"></div>
+<header [class.floating]="topNavfloating"></header>
+<div class="media"></div>
 <div class="content">
-  <div class="media"></div>
+  <section class="intro"></section>
+  <section class="scrap"></section>
+  <section class="store"></section>
+  <section class="how-to-eat"></section>
 </div>
-
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!!
-  </h1>
-</div>
-<h2>Here are some links to help you start: </h2>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-help<br>
-<ul>
-  <li>
-    <h2><a target="_blank" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" href="http://angularjs.blogspot.ca/">Angular blog</a></h2>
-  </li>
-</ul>
+<div class="cart"></div>
+<footer></footer>
