--- a/src/app/hte/hte.component.html
+++ b/src/app/hte/hte.component.html
@@ -1,15 +1,17 @@
-<h2 class="title">How about you?</h2>
-<div class="recipes">
-    <div class="recipe">
-        <h3>Achieves</h3>
-        <p>Achieve the maximum speed possible on the Web Platform today, and take it further, via Web Workers and server-side rendering.<br>Angular puts you in control over scalability. Meet huge data requirements by building data models on RxJS, Immutable.js or another push-model.</p>
-    </div>
-    <div class="recipe">
-        <h3>Learn</h3>
-        <p>Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop.</p>
-    </div>
-    <div class="recipe">
-        <h3>Prototype</h3>
-        <p>From prototype through global deployment, Angular delivers the productivity and scalable infrastructure that supports Google's largest applications native mobile and native desktop native mobile and native desktop.</p>
+<div class="boundary">
+    <h2 class="title">How about you?</h2>
+    <div class="recipes">
+        <div class="recipe">
+            <h3>Achieves</h3>
+            <p>Achieve the maximum speed possible on the Web Platform today, and take it further, via Web Workers and server-side rendering.<br>Angular puts you in control over scalability. Meet huge data requirements by building data models on RxJS, Immutable.js or another push-model.</p>
+        </div>
+        <div class="recipe">
+            <h3>Learn</h3>
+            <p>Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop.</p>
+        </div>
+        <div class="recipe">
+            <h3>Prototype</h3>
+            <p>From prototype through global deployment, Angular delivers the productivity and scalable infrastructure that supports Google's largest applications native mobile and native desktop native mobile and native desktop.</p>
+        </div>
     </div>
 </div>
