--- a/src/app/scrap/card.component.html
+++ b/src/app/scrap/card.component.html
@@ -1,7 +1,9 @@
-<h2 class="title">Scrap</h2>
-<div class="scrap-box">
-    <div class="article"><span>article</span></div>
-    <div class="article"><span>article</span></div>
-    <div class="article"><span>article</span></div>
-    <div class="article"><span>article</span></div>
+<div class="boundary">
+    <h2 class="title">Scrap</h2>
+    <div class="scrap-box">
+        <div class="article"><span>article</span></div>
+        <div class="article"><span>article</span></div>
+        <div class="article"><span>article</span></div>
+        <div class="article"><span>article</span></div>
+    </div>
 </div>
