--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,6 +1,8 @@
-<h2 class="title">Store</h2>
-<div class="product-box">
-    <div class="product"><span>product</span></div>
-    <div class="product"><span>product</span></div>
-    <div class="product"><span>product</span></div>
+<div class="boundary">
+    <h2 class="title">Store</h2>
+    <div class="product-box">
+        <div class="product"><span>product</span></div>
+        <div class="product"><span>product</span></div>
+        <div class="product"><span>product</span></div>
+    </div>
 </div>
