--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,2 @@
-@import url("http://fonts.googleapis.com/earlyaccess/notosanskr.css");
-@import "assets/styles/test";
+@import "styles/mixins";
+@import "styles/main";
