--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -98,8 +98,9 @@ header {
     margin: 10px 0 45px 0;
     & .screen {
         position: relative;
-        max-height: 600px;
+        max-height: 550px;
         color: #fff;
+        background-color: #000;
         overflow: hidden;
         text-align: center;
         & h2 {
@@ -112,32 +113,66 @@ header {
             height: 100%;
             & .source img {
                 width: 100%;
+                @include scale(1.1);
             }
-            & .video-cover {
+            & .msg {
                 position: absolute;
+                width: 100%;
+                height: 100%;
                 top: 0;
                 left: 0;
-                width: 100%;
-                height :100%;
-                background: #000;
-                opacity: 0;
+                & h2 {
+                    font-size: 32px;
+                    margin-top: 15%;
+                    margin-bottom: 16px;
+                }
+                & p {
+                    margin: 5px 0;
+                    font-size: 16px;
+                    font-weight: 300;
+                }
             }
         }
-        & .video-msg {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            & h2 {
-                font-size: 32px;
-                margin-top: 15%;
-                margin-bottom: 16px;
+    }
+    & .video-switching {
+        & .video {
+            & .source {
+                -webkit-animation-name: fade-in;
+                animation-name: fade-in;
+                -webkit-animation-duration: 3s;
+                animation-duration: 3s;
+                -webkit-animation-fill-mode: both;
+                animation-fill-mode: both;
+                animation-delay: 2s;
+                & img {
+                    -webkit-animation-name: scale-in;
+                    animation-name: scale-in;
+                    -webkit-animation-duration: 5s;
+                    animation-duration: 5s;
+                    -webkit-animation-fill-mode: both;
+                    animation-fill-mode: both;
+                    animation-delay: 2s;
+                }
             }
-            & p {
-                margin: 5px 0;
-                font-size: 16px;
-                font-weight: 300;
+            & .msg {
+                & h2 {
+                    -webkit-animation-name: fade-in;
+                    animation-name: fade-in;
+                    -webkit-animation-duration: 2s;
+                    animation-duration: 2s;
+                    -webkit-animation-fill-mode: both;
+                    animation-fill-mode: both;
+                    animation-delay: .5s;
+                }
+                & p {
+                    -webkit-animation-name: fade-in;
+                    animation-name: fade-in;
+                    -webkit-animation-duration: 2s;
+                    animation-duration: 2s;
+                    -webkit-animation-fill-mode: both;
+                    animation-fill-mode: both;
+                    animation-delay: 1s;
+                }
             }
         }
     }
@@ -302,19 +337,29 @@ footer {
 }
 
 
-.fadeOut {
-  -webkit-animation-name: fadeOut;
-  animation-name: fadeOut;
-  -webkit-animation-duration: 3s;
-  animation-duration: 3s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  }
-  @-webkit-keyframes fadeOut {
+@-webkit-keyframes fade-out {
   0% {opacity: 1;}
   100% {opacity: 0;}
-  }
-  @keyframes fadeOut {
+}
+@keyframes fade-out {
   0% {opacity: 1;}
   100% {opacity: 0;}
-  }
+}
+
+@-webkit-keyframes scale-in {
+  0% {transform: scale(1.2);}
+  100% {transform: scale(1.1);}
+}
+@keyframes scale-in {
+  0% {transform: scale(1.2);}
+  100% {transform: scale(1.1);}
+}
+
+@-webkit-keyframes fade-in {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+@keyframes fade-in {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
