--- a/src/app/media/boxc.component.html
+++ b/src/app/media/boxc.component.html
@@ -1,18 +1,18 @@
 <div class="part top">
-    <div class="source"><img src="{{image}}" /></div>
+    <div class="source"><img src="{{args.image}}" /></div>
     <div class="cover">
         <div class="typo">
-            <h2>{{title}}</h2>
-            <p>{{date}}</p>
+            <h2>{{args.title}}</h2>
+            <p>{{args.date}}</p>
         </div>
     </div>
 </div>
 <div class="part bottom">
-    <div class="source"><img src="{{image}}" /></div>
+    <div class="source"><img src="{{args.image}}" /></div>
     <div class="cover">
         <div class="typo">
-            <h2>{{title}}</h2>
-            <p>{{date}}</p>
+            <h2>{{args.title}}</h2>
+            <p>{{args.date}}</p>
         </div>
     </div>
 </div>
