--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,10 +1,12 @@
 <div class="carousel">
-    <ng-template ngFor let-video [ngForOf]="videos | reverse">
-        <div *ngIf="video.type=='a'" class="box" data-type="a" [title]="video.title" [date]="dateFormat(video.time)" [image]="video.src"></div>
-        <div *ngIf="video.type=='b'" class="box" data-type="b" [title]="video.title" [date]="dateFormat(video.time)" [image]="video.src"></div>
-        <div *ngIf="video.type=='c'" class="box" data-type="c" [title]="video.title" [date]="dateFormat(video.time)" [image]="video.src"></div>
-        <div *ngIf="video.type=='d'" class="box" data-type="d" [title]="video.title" [date]="dateFormat(video.time)" [image]="video.src"></div>
-    </ng-template>
+    <ng-template ngFor let-box [ngForOf]="boxes">
+        <div *ngIf="box.type=='a'" class="box" data-type="a" [args]="box"></div>
+        <div *ngIf="box.type=='b'" class="box" data-type="b" [args]="box"></div>
+        <div *ngIf="box.type=='c'" class="box" data-type="c" [args]="box"></div>
+        <div *ngIf="box.type=='d'" class="box" data-type="d" [args]="box"></div>
+    </ng-template>  
+
+        <!-- <pic-a class="box" [title]="video.title" [date]="dateFormat(video.time)" [image]="video.src"></pic-a> -->
 </div>
 <div class="nav">
     <div class="buttons">
