--- a/src/app/media/box/boxb.component.html
+++ b/src/app/media/box/boxb.component.html
@@ -1,4 +1,4 @@
-<div class="source"><img src="{{args.image}}" /></div>
+<div class="source" [style.background-image]="'url('+args.images[0]+')'"></div>
 <div class="cover">
     <div class="typo">
         <h2>{{args.title}}</h2>
