--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -44,7 +44,7 @@ header {
         position: relative;
         top: 50%;
         margin-top: -15px;
-        float: right;
+        // float: right;
         & ul {
             margin: 0;
             padding: 0;
