--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -122,11 +122,12 @@ header {
             display: inline-block;
             position: relative;
             height: 550px;
-            margin-right: -4px;
+            // margin-right: -4px;
             & .source {
                 position: relative;
                 width: 100%;
                 height: 100%;
+                // margin-left: -1px;
                 overflow: hidden;
                 background: #000;
                 & youtube-player {
@@ -137,8 +138,7 @@ header {
             }
             & .cover {
                 position: absolute;
-                display: table;
-                // display: none;
+                // display: table;
                 top: 0;
                 left: 0;
                 width: 100%;
