--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,12 +1,24 @@
-<div class="picinfo">
+<div class="picinfo top" [class.hidden]="picinfoHidden">
     <h2>{{selected.title}}</h2>
     <p>{{selected.date}}</p>
 </div>
-<div class="carousel">
-    <div *ngFor="let boxData of boxes" class="box type-{{boxData.type}}" [args]="boxData"></div>
-</div>
-<div class="nav">
-    <div class="buttons">
-    <a class="prev" href="#">PREV</a>
-    <a class="next" href="#">NEXT</a>
+<div class="picstream">
+    <div class="carousel-bg">
+        <div class="picinfo left">
+            <h2>{{boxes[0].title}}</h2>
+            <p>{{boxes[0].date}}</p>
+        </div>
+        <div class="picinfo right">
+            <h2>{{boxes[boxes.length-1].title}}</h2>
+            <p>{{boxes[boxes.length-1].date}}</p>
+        </div>
+    </div>
+     <div class="carousel">
+        <div *ngFor="let boxData of boxes" class="box type-{{boxData.type}}" [args]="boxData"></div>
+    </div>
+    <div class="nav">
+        <div class="buttons">
+        <a class="prev" href="#">PREV</a>
+        <a class="next" href="#">NEXT</a>
+    </div>
 </div>
