--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -30,21 +30,31 @@ header {
     height: $topNavHeight;
     background: #fff;
     border-bottom: 1px solid #fff;
+    @include transition(opacity .6s ease);
+    &.hidden {
+        opacity: 0;
+    }
+    &.floating {
+        border-color: #c1c1c1 !important;
+        margin-top: -20px;
+        opacity: 1 !important;
+    }
     & .logo {
         position: relative;
         float: left;
         top: 50%;
         margin-top: -15px;
         & h2 {
-            margin: 10px 25px;
+            margin: 10px 35px;
             font-size: 17px;
         }
     }
     & .menu {
         position: relative;
         top: 50%;
-        width: 420px;
-        margin: 0 auto;
+        width: 430px;
+        // margin: 0 auto;
+        float: right;
         margin-top: -15px;
         // float: right;
         & ul {
@@ -65,20 +75,16 @@ header {
                     }
                 }
                 &:last-child {
-                    margin-right: 40px;
+                    margin-right: 50px;
                 }
             }
         }
-    }
-    &.floating {
-        border-color: #c1c1c1 !important;
-        margin-top: -20px;
     }
 }
 
 .content {
     width: 100%;
-    margin-top: $topNavHeight + 40;
+    margin-top: 60px;
     & .title {
         text-align: center;
     }
@@ -99,9 +105,27 @@ header {
     display: block;
     padding: 0 !important;
     margin: 10px 0 45px 0;
-    & .picinfo {
+    & .picinfo.top {
         text-align: center;
-
+        @include transition(all .35s ease);
+        & h2 {
+            margin-bottom: 0;
+            font-size: 24px;
+        }
+        & p {
+            margin: 5px 0 0 0;
+            font-size: 13px;
+        }
+        &.hidden {
+            opacity: 0;
+        }
+    }
+    & .picinfo.left {
+        float: left;
+        width: 50%;
+        margin-top: 210px;
+        margin-left: -220px;
+        text-align: center;
         & h2 {
             margin-bottom: 0;
             font-size: 24px;
@@ -111,133 +135,162 @@ header {
             font-size: 13px;
         }
     }
-    & .carousel {
+    & .picinfo.right {
+        float: right;
+        text-align: center;
+
+        margin-top: 210px;
+        margin-right: 220px;
+        & h2 {
+            margin-bottom: 0;
+            font-size: 24px;
+        }
+        & p {
+            margin: 5px 0 0 0;
+            font-size: 13px;
+        }
+    }
+
+    & .picstream {
         position: relative;
         width: 100%;
         height: 550px;
-        margin-top: 15px;
+        margin-top: 25px;
         overflow: hidden;
-        white-space: nowrap;
-        & .box {
-            display: inline-block;
+        & .carousel-bg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            // background: #eee;
+        }
+        & .carousel {
             position: relative;
-            height: 550px;
-            // margin-right: -4px;
-            & .source {
+            width: 100%;
+            height: 100%;
+            white-space: nowrap;
+            & .box {
+                display: inline-block;
                 position: relative;
-                width: 100%;
-                height: 100%;
-                // margin-left: -1px;
-                overflow: hidden;
-                background: #000;
-                & youtube-player {
-                    position: absolute;
-                    top: 50%;
-                    transform: translate(0, -50%) scale(1.2, 1.2);
-                }
-            }
-            & .cover {
-                position: absolute;
-                // display: table;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                overflow: hidden;
-                background: transparent no-repeat center bottom/cover;
-                @include transition(all .6s ease);
-                & .typo {
-                    // display: table-cell;
-                    display: none !important;
-                    color: #fff;
-                    & h2 {
-                        margin: 0 0 7px 0;
-                        font-weight: normal;
-                        font-size: 28px;
-                    }
-                    & p {
-                        margin: 7px 0 0 0;
-                        font-size: 15px;
-                    }
-                }
-                &.cover-fade-out {
-                    opacity: 0;
-                }
-            }
-            &.type-a {
-                width: 890px;
-                & .typo {
-                    display: table-cell;
-                    text-align: center;
-                    vertical-align: bottom;
-                    padding: 0 0 100px 0;
-                }
-            }
-            &.type-b {
-                width: 400px;
-                & .typo {
-                    display: table-cell;
-                    text-align: center;
-                    vertical-align: bottom;
-                    padding: 0 0 100px 0;
-                }
-            }
-            &.type-c {
-                width: 400px;
-                & .typo {
-                    display: table-cell;
-                    vertical-align: middle;
-                    text-align: center;
-                }
-                & .part {
+                height: 550px;
+                // margin-right: -4px;
+                & .source {
                     position: relative;
-                    height: 50%;
-                }
-            }
-            &.type-d {
-                width: 890px;
-                & .typo {
-                    display: table-cell;
-                    vertical-align: middle;
-                    text-align: center;
-                }
-                & .part {
-                    position: relative;
-                    height: 50%;
-                }
-                & .top {
                     width: 100%;
+                    height: 100%;
+                    // margin-left: -1px;
+                    overflow: hidden;
+                    background: #000;
+                    & youtube-player {
+                        position: absolute;
+                        top: 50%;
+                        transform: translate(0, -50%) scale(1.2, 1.2);
+                    }
                 }
-                & .bottom {
-                    display: inline-block;
-                    width: 50%;
-                    margin-right: -4px;
+                & .cover {
+                    position: absolute;
+                    // display: table;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    overflow: hidden;
+                    background: transparent no-repeat center bottom/cover;
+                    @include transition(all .6s ease);
+                    & .typo {
+                        // display: table-cell;
+                        display: none !important;
+                        color: #fff;
+                        & h2 {
+                            margin: 0 0 7px 0;
+                            font-weight: normal;
+                            font-size: 28px;
+                        }
+                        & p {
+                            margin: 7px 0 0 0;
+                            font-size: 15px;
+                        }
+                    }
+                    &.cover-fade-out {
+                        opacity: 0;
+                    }
+                }
+                &.type-a {
+                    width: 890px;
+                    & .typo {
+                        display: table-cell;
+                        text-align: center;
+                        vertical-align: bottom;
+                        padding: 0 0 100px 0;
+                    }
+                }
+                &.type-b {
+                    width: 400px;
+                    & .typo {
+                        display: table-cell;
+                        text-align: center;
+                        vertical-align: bottom;
+                        padding: 0 0 100px 0;
+                    }
+                }
+                &.type-c {
+                    width: 400px;
+                    & .typo {
+                        display: table-cell;
+                        vertical-align: middle;
+                        text-align: center;
+                    }
+                    & .part {
+                        position: relative;
+                        height: 50%;
+                    }
+                }
+                &.type-d {
+                    width: 890px;
+                    & .typo {
+                        display: table-cell;
+                        vertical-align: middle;
+                        text-align: center;
+                    }
+                    & .part {
+                        position: relative;
+                        height: 50%;
+                    }
+                    & .top {
+                        width: 100%;
+                    }
+                    & .bottom {
+                        display: inline-block;
+                        width: 50%;
+                        margin-right: -4px;
+                    }
                 }
             }
         }
-    }
-    & .nav {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 0px;
-        background: red;
-        & .buttons {
-            box-sizing: border-box;
+        & .nav {
+            position: absolute;
+            top: 0;
             width: 100%;
-            height: 0;
-            max-width: 1050px;
-            margin: 0 auto;
-            padding: 0 15px;
-            & a {
-                display: inline-block;
-                margin-top: 320px;
-                font-size: 21px;
-                font-weight: 100;
-                color: #fff;
-            }
-            & .next {
-                float: right;
+            height: 0px;
+            background: red;
+            & .buttons {
+                box-sizing: border-box;
+                width: 100%;
+                height: 0;
+                max-width: 1050px;
+                margin: 0 auto;
+                padding: 0 15px;
+                & a {
+                    display: inline-block;
+                    margin-top: 260px;
+                    font-size: 21px;
+                    font-weight: 100;
+                    color: #fff;
+                }
+                & .next {
+                    float: right;
+                }
             }
         }
     }
