--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,30 +1,30 @@
-<div class="picinfo top" [@viewState]="viewState">
+<!-- <div class="picinfo top" [@viewState]="topPicinfoViewState">
     <h2>{{picTitle}}</h2>
     <p>{{picDate}}</p>
-</div>
+</div> -->
 <div class="picstream">
     <div class="carousel-bg">
-        <div class="left-side {{bgTextType}}">
+        <div class="left-side {{mainPicType}}">
             <div class="picinfo">
                 <h2>{{boxes[0].title}}</h2>
                 <p>{{boxes[0].desc}}</p>
                 <p>{{boxes[0].date}}</p>
             </div>
         </div>
-        <div class="right-side {{bgTextType}}">
+        <!-- <div class="right-side {{mainPicType}}">
             <div class="picinfo">
                 <h2>{{boxes[boxes.length-1].title}}</h2>
                 <p>{{boxes[boxes.length-1].desc}}</p>
                 <p>{{boxes[boxes.length-1].date}}</p>
             </div>
-        </div>
+        </div> -->
     </div>
-     <div class="carousel">
-           <div *ngFor="let boxData of boxes" class="box type-{{boxData.type}}" [args]="boxData"></div>
+    <div class="carousel">
+        <div *ngFor="let boxData of boxes; let i = index" class="box type-{{boxData.type}}" [args]="boxData" (click)="focus(i)"></div>
     </div>
-    <div class="nav">
+     <!-- <div class="nav">
         <div class="buttons">
-        <a class="prev" href="#">PREV</a>
-        <a class="next" href="#">NEXT</a>
-    </div>
+        <a class="prev" href="#" [@viewState]="prevButtonViewState">PREV</a>
+        <a class="next" href="#" [@viewState]="nextButtonViewState">NEXT</a>
+    </div> -->
 </div>
