--- a/src/app/media/box.component.html
+++ b/src/app/media/box.component.html
@@ -1,10 +1,12 @@
 <ng-template [ngIf]="args.type=='a' || args.type=='b'">
     <div class="source">
-        <!-- <youtube-player *ngIf="args.videos[0]" [videoId]="args.videos[0]" [width]="args.type == 'a' ? 890 : 400" [height]="550" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player> -->
+         <!-- <youtube-player *ngIf="args.videos[0]" [videoId]="args.videos[0]" [width]="args.type == 'a' ? 890 : 400" [height]="550" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player> -->
     </div>
-    <div class="cover" [@coverViewState]="coverViewStates[0]" [style.background-image]="'url('+args.images[0]+')'">
+    <div class="cover">
+        <div class="image" [@fade]="coverImageViewStates[0]" [style.background-image]="'url('+args.images[0]+')'"></div>
         <div class="typo">
             <h2>{{args.title}}</h2>
+            <p>{{args.desc}}</p>
             <p>{{args.date}}</p>
         </div>
     </div>
@@ -14,57 +16,22 @@
         <div class="source">
             <!-- <youtube-player *ngIf="args.videos[0]" [videoId]="args.videos[0]" [width]="400" [height]="275" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player> -->
         </div>
-        <div class="cover" [@coverViewState]="coverViewStates[0]" [style.background-image]="'url('+args.images[0]+')'">
-            <div class="typo">
-                <h2>{{args.title}}</h2>
-                <p>{{args.date}}</p>
-            </div>
+        <div class="cover">
+            <div class="image" [@fade]="coverImageViewStates[0]" [style.background-image]="'url('+args.images[0]+')'"></div>
         </div>
     </div>
     <div class="part bottom">
         <div class="source">
             <!-- <youtube-player *ngIf="args.videos[1]" [width]="430" [height]="300" [playerVars]="playerOptions" (ready)="setPlayer($event, 1)" (change)="onStateChange($event, 1)"></youtube-player> -->
         </div>
-        <div class="cover" [@coverViewState]="coverViewStates[1]" [style.background-image]="'url('+args.images[1]+')'">
-            <div class="typo">
-                <h2>{{args.title}}</h2>
-                <p>{{args.date}}</p>
+        <div class="cover">
+            <div class="image" [@fade]="coverImageViewStates[1]" [style.background-image]="'url('+args.images[1]+')'">
+                <div class="typo">
+                    <h2>{{args.title}}</h2>
+                    <p>{{args.desc}}</p>
+                    <p>{{args.date}}</p>
+                </div>
             </div>
         </div>
     </div>
 </ng-template>
-<!-- <ng-template [ngIf]="args.type=='d'">
-    <div class="part top">
-        <div class="source">
-            <youtube-player *ngIf="args.videos[0]" [videoId]="args.videos[0]" [width]="890" [height]="550" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player>
-        </div>
-        <div class="cover" [@coverViewState]="coverViewStates[0]" [style.background-image]="'url('+args.images[0]+')'">
-            <div class="typo">
-                <h2>{{args.title}}</h2>
-                <p>{{args.date}}</p>
-            </div>
-        </div>
-    </div>
-    <div class="part bottom">
-        <div class="source">
-            <youtube-player *ngIf="args.videos[1]" [videoId]="args.videos[1]" [width]="445" [height]="275" [playerVars]="playerOptions" (ready)="setPlayer($event, 1)" (change)="onStateChange($event, 1)"></youtube-player>
-        </div>
-        <div class="cover" [@coverViewState]="coverViewStates[1]" [style.background-image]="'url('+args.images[1]+')'">
-            <div class="typo">
-                <h2>{{args.title}}</h2>
-                <p>{{args.date}}</p>
-            </div>
-        </div>
-    </div>
-    <div class="part bottom">
-        <div class="source">
-            <youtube-player *ngIf="args.videos[2]" [videoId]="args.videos[2]" [width]="445" [height]="275" [playerVars]="playerOptions" (ready)="setPlayer($event, 2)" (change)="onStateChange($event, 2)"></youtube-player>
-        </div>
-        <div class="cover" [@coverViewState]="coverViewStates[2]" [style.background-image]="'url('+args.images[2]+')'">
-            <div class="typo">
-                <h2>{{args.title}}</h2>
-                <p>{{args.date}}</p>
-            </div>
-        </div>
-    </div>
-</ng-template> -->
