--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,6 +1,13 @@
 @charset "utf-8";
 @import url("http://fonts.googleapis.com/earlyaccess/notosanskr.css");
 
+$pageWidth: 980px;
+$widePicWidth: 890px;
+$halfPicWidth: 400px;
+
+*:focus {
+    outline: none;
+}
 body {
     font-family: 'Noto Sans KR', "Roboto","Helvetica",arial,sans-serif;
     margin: 0;
@@ -98,7 +105,7 @@ header {
 
 .content {
     width: 100%;
-    margin-top: 50px;
+    margin-top: 120px;
     & .title {
         text-align: center;
     }
@@ -106,7 +113,7 @@ header {
         padding: 50px 0 75px 0;
         & .boundary {
             margin: 0 auto;
-            max-width: 980px;
+            max-width: $pageWidth;
         }
         & h2 {
             margin-bottom: 55px;
@@ -161,7 +168,6 @@ header {
                 }
                 & .picinfo {
                     max-width: 270px;
-                    padding: 0 25px;
                     margin: 0 auto;
                     text-align: left;
                     & h2 {
@@ -189,7 +195,6 @@ header {
                 }
                 & .picinfo {
                     max-width: 270px;
-                    padding: 0 25px;
                     margin: 0 auto;
                     text-align: left;
                     & h2 {
@@ -207,11 +212,12 @@ header {
             position: relative;
             width: 100%;
             height: 100%;
-            white-space: nowrap;
+            // white-space: nowrap;
             & .box {
                 display: inline-block;
                 position: relative;
                 height: 550px;
+                cursor: pointer;
                 // margin-right: -4px;
                 & .source {
                     position: relative;
@@ -228,16 +234,20 @@ header {
                 }
                 & .cover {
                     position: absolute;
-                    // display: table;
                     top: 0;
                     left: 0;
                     width: 100%;
                     height: 100%;
                     overflow: hidden;
-                    background: transparent no-repeat center bottom/cover;
+                    & .image {
+                        width: 100%;
+                        height: 100%;
+                        background: transparent no-repeat center bottom/cover;
+                    }
                     & .typo {
-                        // display: table-cell;
-                        display: none !important;
+                        position: absolute;
+                        left: 30px;
+                        bottom: 35px;
                         color: #fff;
                         & h2 {
                             margin: 0 0 7px 0;
@@ -247,60 +257,39 @@ header {
                         & p {
                             margin: 7px 0 0 0;
                             font-size: 15px;
+                            opacity: .7;
                         }
                     }
                 }
                 &.type-a {
-                    width: 890px;
+                    width: $widePicWidth;
                     & .typo {
-                        display: table-cell;
-                        text-align: center;
-                        vertical-align: bottom;
-                        padding: 0 0 100px 0;
+                        width: 340px;
                     }
                 }
                 &.type-b {
-                    width: 400px;
+                    width: $halfPicWidth;
                     & .typo {
-                        display: table-cell;
-                        text-align: center;
-                        vertical-align: bottom;
-                        padding: 0 0 100px 0;
+                        width: 270px;
                     }
                 }
                 &.type-c {
-                    width: 400px;
+                    width: $halfPicWidth;
                     & .typo {
-                        display: table-cell;
-                        vertical-align: middle;
-                        text-align: center;
+                        width: 270px;
                     }
                     & .part {
                         position: relative;
                         height: 50%;
                     }
                 }
-                &.type-d {
-                    width: 890px;
+                &:first-child {
                     & .typo {
-                        display: table-cell;
-                        vertical-align: middle;
-                        text-align: center;
-                    }
-                    & .part {
-                        position: relative;
-                        height: 50%;
-                    }
-                    & .top {
-                        width: 100%;
-                    }
-                    & .bottom {
-                        display: inline-block;
-                        width: 50%;
-                        margin-right: -4px;
+                        display: none;
                     }
                 }
             }
+
         }
         & .nav {
             position: absolute;
