--- a/src/styles/_response.scss
+++ b/src/styles/_response.scss
@@ -1,3 +1,4 @@
+// Mobile mode
 @media screen and (max-width: 980px) {
 
 }
@@ -21,37 +22,18 @@
 // Media area
 @media screen and (max-width: 1440px) {
     .media {
-        & .left-side .picinfo, & .right-side .picinfo {
-            display: none;
-        }
-    }
-}
-@media screen and (min-width: 1441px) and (max-width: 1600px) {
-    .media {
-        & .left-side {
-            &.wideType {
-                & .picinfo {
-                    max-width: 240px;
-                    & h2 {
-                        font-size: 20px;
-                    }
-                }
+        & .carousel-bg {
+            background: transparent !important;
+            & .left-side .picinfo, & .right-side .picinfo {
+                display: none;
             }
         }
-        // & .left-side .picinfo .h2, & .right-side .picinfo .h2 {
-        //     font-size: 20px;
-        // }
+        & .carousel .box:first-child {
+            & .typo {
+                display: block !important;
+            }
+        }
     }
-}
-@media screen and (min-width: 1441px) and (max-width: 1920px) {
-    // .media {
-    //     & .left-side .picinfo, & .right-side .picinfo {
-    //         display: none;
-    //     }
-    // }
-}
-@media screen and (min-width: 1921px) {
-
 }
 
 
