--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -5,6 +5,9 @@ $pageWidth: 980px;
 $widePicWidth: 890px;
 $halfPicWidth: 400px;
 
+* {
+    box-sizing: border-box;
+}
 *:focus {
     outline: none;
 }
@@ -13,6 +16,9 @@ body {
     margin: 0;
     padding: 0;
     color: #555;
+}
+app-root {
+    display: block;
 }
 img {
     border:0;
@@ -92,6 +98,7 @@ header {
                 float:left;
                 text-align: center;
                 margin: 10px 25px;
+                font-size: 16px;
                 & a {
                     text-decoration: none;
                     &:hover {
