--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -18,6 +18,7 @@ body {
     color: #555;
 }
 app-root {
+    position: relative;
     display: block;
 }
 img {
@@ -68,6 +69,9 @@ header {
         margin-top: -20px;
         background: #fff;
         opacity: 1 !important;
+        & .menu {
+            color: #666 !important;
+        }
     }
     & .logo {
         position: relative;
@@ -132,7 +136,7 @@ header {
     position: relative;
     display: block;
     padding: 0 !important;
-    margin: 10px 0 45px 0;
+    margin: 0 0 45px 0;
     & .picinfo.top {
         text-align: center;
         & h2 {
@@ -151,7 +155,6 @@ header {
         position: relative;
         width: 100%;
         height: 550px;
-        margin-top: 25px;
         overflow: hidden;
         & .carousel-bg {
             position: absolute;
@@ -256,6 +259,7 @@ header {
                         left: 30px;
                         bottom: 35px;
                         color: #fff;
+                        width: 80%;
                         & h2 {
                             margin: 0 0 7px 0;
                             font-weight: normal;
@@ -271,19 +275,19 @@ header {
                 &.type-a {
                     width: $widePicWidth;
                     & .typo {
-                        width: 340px;
+                        max-width: 340px;
                     }
                 }
                 &.type-b {
                     width: $halfPicWidth;
                     & .typo {
-                        width: 270px;
+                        max-width: 270px;
                     }
                 }
                 &.type-c {
                     width: $halfPicWidth;
                     & .typo {
-                        width: 270px;
+                        max-width: 270px;
                     }
                     & .part {
                         position: relative;
