--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 <div class="content">
     <section class="media"></section>
     <section class="intro"></section>
-    <section class="scrap"></section>
     <section class="store"></section> 
-    <section class="how-to-eat"></section>
+    <section class="scrap"></section>
+    <!-- <section class="how-to-eat"></section> -->
 </div>
 <div class="cart"></div>
 <a [class.visible]="topButtonVisible" (click)="goToTop($event)" href="#" class="go-to-top"><i class="icon-top"></i></a>
