--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -65,7 +65,7 @@ header {
         opacity: 0;
     }
     &.floating {
-        border: 1px solid #c1c1c1 !important;
+        border-bottom: 1px solid #c1c1c1 !important;
         margin-top: -20px;
         background: #fff;
         opacity: 1 !important;
