--- a/src/styles/_response.scss
+++ b/src/styles/_response.scss
@@ -28,10 +28,19 @@
     }
     .media {
         margin-top: 0;
+        margin-bottom: 20px;
        
+    }
+    .intro {
+        & p {
+            width: 85%;
+        }
     }
     .content {
         margin-top: 0;
+        & section {
+            padding: 15px 0 55px 0;
+        }
     }
 }
 
