--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -342,14 +342,42 @@ header {
     & .scrap-box {
         width: 100%;
         margin-bottom: 25px;
-        text-align: center;
         & .article {
             display: inline-block;
-            width: 220px;
-            padding: 180px 0;
-            margin-right: 10px;
-            border: 1px solid #999;
+            width: 230px;
+            height: 410px;
+            margin-right: 15px;
+            vertical-align: top;
+            // border: 1px solid #999;
+            &:last-child {
+                margin-right: 0;
+            }
+            & .thumb {
+                width: 100%;
+                height: 150px;
+                background: transparent no-repeat center bottom/cover;
+            }
+            & h3 {
+                max-height: 50px;
+                overflow: hidden;
+                color: #333;
+                font-size: 17px;
+                font-weight: normal;
+            }
+            & p {
+                height: 130px;
+                color: #666;
+                font-size: 15px;
+                overflow: hidden;
+                text-align: justify;
+            }
+            & a {
+                font-size: 13px;
+                color: #999;
+                float: right;
+            }
         }
+
     }
     & .more {
         width: 100%;
