--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -341,14 +341,47 @@ header {
 .scrap {
     & .scrap-box {
         width: 100%;
-        margin-bottom: 25px;
         & .article {
             display: inline-block;
             width: 230px;
             height: 410px;
             margin-right: 15px;
+            margin-bottom: 45px;
             vertical-align: top;
             // border: 1px solid #999;
+            & a {
+                display: block;
+                text-decoration: none;
+                & .thumb {
+                    position: relative;
+                    & .bg {
+                        position: relative;
+                        display: none;
+                        width: 100%;
+                        height: 100%;
+                        background: #000;
+                        opacity: .7;
+                    }
+                    & .overlay {
+                        position: absolute;
+                        display: none;
+                        width: 100%;
+                        height: 100%;
+                        top: 0;
+                        color: #fff;
+                        text-align: center;
+                        margin-top: 65px;
+                    }
+                }
+                &:hover {
+                    & .bg {
+                        display: block;
+                    }
+                    & .overlay {
+                        display: block;
+                    }
+                }
+            }
             &:last-child {
                 margin-right: 0;
             }
@@ -365,7 +398,7 @@ header {
                 font-weight: normal;
             }
             & p {
-                height: 130px;
+                height: 133px;
                 color: #666;
                 font-size: 15px;
                 overflow: hidden;
