--- a/src/app/scrap/scrap.component.html
+++ b/src/app/scrap/scrap.component.html
@@ -3,13 +3,10 @@
         <div class="scrap-box">
             <div *ngFor="let scrap of scraps" class="article">
                 <a href="{{scrap.source}}" target="_blank">
-                    <div class="thumb" [style.background-image]="'url('+scrap.image+')'">
-                        <div class="bg"></div>
-                        <div class="overlay">자세히 보기</div>
-                    </div>
+                    <div class="thumb" [style.background-image]="'url('+scrap.image+')'"></div>
                     <h3>{{scrap.title}}</h3>
                     <p>{{scrap.desc}}</p>
-                    <a href="#">{{scrap.srctit}}</a>
+                    <a>{{scrap.srctit}}</a>
                 </a>
             </div>
         </div>
