--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -352,33 +352,9 @@ header {
             & a {
                 display: block;
                 text-decoration: none;
-                & .thumb {
-                    position: relative;
-                    & .bg {
-                        position: relative;
-                        display: none;
-                        width: 100%;
-                        height: 100%;
-                        background: #000;
-                        opacity: .7;
-                    }
-                    & .overlay {
-                        position: absolute;
-                        display: none;
-                        width: 100%;
-                        height: 100%;
-                        top: 0;
-                        color: #fff;
-                        text-align: center;
-                        margin-top: 65px;
-                    }
-                }
                 &:hover {
-                    & .bg {
-                        display: block;
-                    }
-                    & .overlay {
-                        display: block;
+                    & h3 {
+                        text-decoration: underline;
                     }
                 }
             }
