--- a/src/styles/_response.scss
+++ b/src/styles/_response.scss
@@ -77,4 +77,20 @@
     }
 }
 
+// Scrap area
+// @media screen and (max-width: 500px) {
+//     .scrap .scrap-box .article {
+//         width: 100%;
+//     }
+// }
+// @media screen and (min-width: 501px) and (max-width: 750px) {
+//     .scrap .scrap-box .article {
+//         width: 100%;
+//     }
+// }
+// @media screen and (min-width: 7511px) and (max-width: 980px) {
 
+// }
+// @media screen and (min-width: 981px) {
+
+// }
