--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 @import "styles/mixins";
 @import "styles/main";
+@import "styles/header";
+@import "styles/media";
+@import "styles/intro";
+@import "styles/store";
 @import "styles/scrap";
 @import "styles/footer";
 @import "styles/response";
